# my_extension

./: LICENSE  README.md  pyproject.toml
my_extension/: __init__.py
my_extension/nbextensions/notebook/my_notebook_extension/: main.js
my_extension/nbextensions/tree/my_tree_extension/: main.js
my_extension/server_extensions/my_server_extension/: __init__.py
my_extension/server_extensions/my_server_extension/static/js/: myfile.js
