[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_extension"
description = "Example of a combined Jupyter nbextension and Jupyter server extension"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
version = "0.1.0"
authors = [
    { name = "Tim Metzler", email = "tim.metzler@h-brs.de"},
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "notebook>6.4,<7"
]

[project.urls]
Source = "https://github.com/tmetzl/my_extension"